[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracklet_parser"
version = "1.1.0"
dependencies = [
    "black",
    "codespell",
    "docformatter",
    "isort",
    "numpy",
    "pandas",
    "pre-commit",
    "pylint",
    "wheel",
]
requires-python = ">=3.12"
maintainers = [
    { name = "Bjoern Holtvogt", email = "bjoern.holtvogt@gmail.com" },
]
description = "A parser for tracklet labels in KITTI Raw Format 1.0 created by the Computer Vision Annotation Tool (CVAT)."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.txt" }
keywords = ["tracklet", "cvat", "kitti", "annotation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
repository = "https://github.com/holtvogt/tracklet_parser"
issues = "https://github.com/holtvogt/tracklet_parser/issues"
changelog = "https://github.com/holtvogt/tracklet_parser/blob/develop/CHANGELOG.md"

[tool.setuptools]
packages = ["tracklet_parser"]
